Tratamento coluna TotalCharges

--- a/churn_prediction.ipynb
+++ b/churn_prediction.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "20             Churn"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,372 @@
     "- A coluna `customerID` nada agrega ao nosso projeto, pois é apenas um código de identificação dos clientes;\n",
     "- A coluna `Churn` identifica se o cliente deixou ou não de utilizar o serviço da empresa;\n",
     "- Também temos colunas que identificam algumas características dos clientes como Gênero (`gender`); se é idoso ou não (`SeniorCitizen`); e se tem dependentes (`Dependents`);\n",
-    "- Além disso, temos colunas que indicam os tipos de serviços, a forma de pagamento e como é feito a cobrança dos clientes."
+    "- Além disso, temos colunas que indicam os tipos de serviços, a forma de pagamento e como é feito a cobrança dos clientes;\n",
+    "- Ainda, a variável `tenure` está relacionada com o tempo em que a pessoa utiliza determinado serviço, ou seja, isso pode indicar a fidelidade do cliente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**02 - Tipo de cada coluna**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>customerID</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gender</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SeniorCitizen</th>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Partner</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dependents</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tenure</th>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PhoneService</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MultipleLines</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>InternetService</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OnlineSecurity</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OnlineBackup</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DeviceProtection</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TechSupport</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>StreamingTV</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>StreamingMovies</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Contract</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PaperlessBilling</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PaymentMethod</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MonthlyCharges</th>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TotalCharges</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Churn</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        0\n",
+       "customerID         object\n",
+       "gender             object\n",
+       "SeniorCitizen       int64\n",
+       "Partner            object\n",
+       "Dependents         object\n",
+       "tenure              int64\n",
+       "PhoneService       object\n",
+       "MultipleLines      object\n",
+       "InternetService    object\n",
+       "OnlineSecurity     object\n",
+       "OnlineBackup       object\n",
+       "DeviceProtection   object\n",
+       "TechSupport        object\n",
+       "StreamingTV        object\n",
+       "StreamingMovies    object\n",
+       "Contract           object\n",
+       "PaperlessBilling   object\n",
+       "PaymentMethod      object\n",
+       "MonthlyCharges    float64\n",
+       "TotalCharges       object\n",
+       "Churn              object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Tipo dos atributos\n",
+    "pd.DataFrame(df.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como podemos perceber, a variável `TotalCharges` aparenta estar com o tipo incorreto, pois pelas primeiras entradas dela percebemos que é do numérica, no entanto quando verificamos usando a função **dtypes**, ela aparece como *object*. Portanto, vamos verificar melhor a variável `TotalCharges`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vamos converter a variável `TotalCharges` para float64:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cobvertendo TotalCharges\n",
+    "# df[\"TotalCharges\"].astype('float64')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quando tentamos converter a variável `TotalCharges`, aparece o seguinte erro:\n",
+    "\n",
+    "> ValueError: could not convert string to float: \n",
+    "\n",
+    "Esse ocorre, normalmente, quando tentamos converter um variável do tipo *string* para uma do tipo numérico. Além disso, essas entradas não são detectados como valores ausentes, conforme podemos ver:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quantidade de valores ausentes na variável TotalCharges:  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verificando valores ausentes na variável TotalCharges:\n",
+    "print(\"Quantidade de valores ausentes na variável TotalCharges: \", df[\"TotalCharges\"].isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sendo assim, agora vamos transformar as variáveis que são numéricas em *float64* e as que são *string* em valor ausente (np.nan). E para isso, utilizarei uma função adaptada do [Carlos Melo](https://sigmoidal.ai/):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def string_to_float(entrada):\n",
+    "    \"\"\"\n",
+    "    Converte um objeto do tipo string para float.\n",
+    "    \n",
+    "    # Argumentos:\n",
+    "        entrada: objeto string ou coluna de DataFrame do tipo string\n",
+    "        \n",
+    "    # Resultados:\n",
+    "        Valor convertido em float, se a variáel permitir a conversão.\n",
+    "        NaN, caso não seja possível a conversão.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    try:\n",
+    "        return float(entrada)\n",
+    "    except ValueError:\n",
+    "        return np.nan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Copiando o conjunto de dados:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Removendo a coluna `costumerID`, pois como já foi citado anteriormente, ela não agrega valor ao nosso projeto:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean.drop(\"customerID\", axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convertendo a coluna `TotalCharges` para *float*:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean[\"TotalCharges\"] = df_clean[\"TotalCharges\"].apply(string_to_float)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Verificando se a conversão ocorreu corretamente:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_clean[\"TotalCharges\"].dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Verificando a quantidade de valores ausentes na coluna `TotalCharges` antes e depois do tratamento:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valores ausentes em TotalCharges antes:\t\t 0\n",
+      "Valores ausentes em TotalCharges depois:\t 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Valores ausentes em TotalCharges antes:\\t\\t\", df[\"TotalCharges\"].isnull().sum())\n",
+    "print(\"Valores ausentes em TotalCharges depois:\\t\", df_clean[\"TotalCharges\"].isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para tratar os valores ausentes da variável `TotalCharges`, vamos substituir eles pela média da variável:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Substituindo os valores ausentes pela média\n",
+    "TotalChargesMean = round(df_clean[\"TotalCharges\"].mean(), 3)\n",
+    "\n",
+    "df_clean[\"TotalCharges\"].fillna(TotalChargesMean, inplace=True)"
    ]
   },
   {
