Adicionado Preparação dos Dados

--- a/churn_prediction.ipynb
+++ b/churn_prediction.ipynb
@@ -72,6 +72,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+    "\n",
     "# Configurando o notebook\n",
     "sns.set(style=\"white\")\n",
     "%matplotlib inline\n",
@@ -676,7 +678,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cobvertendo TotalCharges\n",
+    "# Convertendo TotalCharges\n",
     "# df[\"TotalCharges\"].astype('float64')"
    ]
   },
@@ -1192,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1283,6 +1285,374 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Preparação dos Dados**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Antes da construção do nosso modelo de *Machine Learning*, precisamos preparar o conjunto dados e para isso farei da seguinte forma:\n",
+    "- As variáveis que contêm duas entradas únicas, incluindo a `Churn` serão processadas utilizando o *LabelEnconder*, ou seja, serão transformados em 0 e 1;\n",
+    "- As variáveis que contêm mais de duas entradas únicas serão transformadas em varíaveis [*dummy*](https://medium.com/data-hackers/vari%C3%A1veis-dummy-o-que-%C3%A9-quando-usar-e-como-usar-78de66cfcca9).\n",
+    "\n",
+    "Então, fazendo a transformação:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Função para classificar se é int ou float ou, se nenhum deles, retorna False\n",
+    "def int_or_float(argumento):\n",
+    "    \"\"\"\n",
+    "    Argumento -> variável para classificar.\n",
+    "    Se 'Argumento' for int ou float retorna True; se nenhum deles, retorna False.\n",
+    "    \"\"\"\n",
+    "    if pd.api.types.is_integer_dtype(argumento):\n",
+    "        return True\n",
+    "    elif pd.api.types.is_float_dtype(argumento):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Separando as variáveis em binárias, numéricas e dummy\n",
+    "var_binaria = []\n",
+    "var_num = []\n",
+    "var_dummy = []\n",
+    "\n",
+    "for i in range(0, len(df_clean.columns)):\n",
+    "    if len(df_clean.iloc[:, i].unique()) == 2:\n",
+    "        var_binaria.append(df_clean.keys()[i])\n",
+    "    elif int_or_float(df_clean.iloc[:, i].dtype):\n",
+    "        var_num.append(df_clean.keys()[i])\n",
+    "    else:\n",
+    "        var_dummy.append(df_clean.keys()[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Criando uma cópia do conjunto de dados\n",
+    "df_prep = df_clean.copy()\n",
+    "\n",
+    "# Label Enconding para as variáveis numéricas\n",
+    "le = LabelEncoder()\n",
+    "\n",
+    "for i in var_binaria:\n",
+    "    df_prep[i] = le.fit_transform(df_prep[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encoding para as variáveis com mais de duas entradas únicas\n",
+    "df_prep = pd.get_dummies(df_prep, columns=var_dummy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>SeniorCitizen</th>\n",
+       "      <th>Partner</th>\n",
+       "      <th>Dependents</th>\n",
+       "      <th>tenure</th>\n",
+       "      <th>PhoneService</th>\n",
+       "      <th>PaperlessBilling</th>\n",
+       "      <th>MonthlyCharges</th>\n",
+       "      <th>TotalCharges</th>\n",
+       "      <th>Churn</th>\n",
+       "      <th>...</th>\n",
+       "      <th>StreamingMovies_No</th>\n",
+       "      <th>StreamingMovies_No internet service</th>\n",
+       "      <th>StreamingMovies_Yes</th>\n",
+       "      <th>Contract_Month-to-month</th>\n",
+       "      <th>Contract_One year</th>\n",
+       "      <th>Contract_Two year</th>\n",
+       "      <th>PaymentMethod_Bank transfer (automatic)</th>\n",
+       "      <th>PaymentMethod_Credit card (automatic)</th>\n",
+       "      <th>PaymentMethod_Electronic check</th>\n",
+       "      <th>PaymentMethod_Mailed check</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>29.85</td>\n",
+       "      <td>29.85</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>34</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>56.95</td>\n",
+       "      <td>1889.50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>53.85</td>\n",
+       "      <td>108.15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42.30</td>\n",
+       "      <td>1840.75</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>70.70</td>\n",
+       "      <td>151.65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 41 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   gender  SeniorCitizen  Partner  Dependents  tenure  PhoneService  \\\n",
+       "0       0              0        1           0       1             0   \n",
+       "1       1              0        0           0      34             1   \n",
+       "2       1              0        0           0       2             1   \n",
+       "3       1              0        0           0      45             0   \n",
+       "4       0              0        0           0       2             1   \n",
+       "\n",
+       "   PaperlessBilling  MonthlyCharges  TotalCharges  Churn  ...  \\\n",
+       "0                 1           29.85         29.85      0  ...   \n",
+       "1                 0           56.95       1889.50      0  ...   \n",
+       "2                 1           53.85        108.15      1  ...   \n",
+       "3                 0           42.30       1840.75      0  ...   \n",
+       "4                 1           70.70        151.65      1  ...   \n",
+       "\n",
+       "   StreamingMovies_No  StreamingMovies_No internet service  \\\n",
+       "0                   1                                    0   \n",
+       "1                   1                                    0   \n",
+       "2                   1                                    0   \n",
+       "3                   1                                    0   \n",
+       "4                   1                                    0   \n",
+       "\n",
+       "   StreamingMovies_Yes  Contract_Month-to-month  Contract_One year  \\\n",
+       "0                    0                        1                  0   \n",
+       "1                    0                        0                  1   \n",
+       "2                    0                        1                  0   \n",
+       "3                    0                        0                  1   \n",
+       "4                    0                        1                  0   \n",
+       "\n",
+       "   Contract_Two year  PaymentMethod_Bank transfer (automatic)  \\\n",
+       "0                  0                                        0   \n",
+       "1                  0                                        0   \n",
+       "2                  0                                        0   \n",
+       "3                  0                                        1   \n",
+       "4                  0                                        0   \n",
+       "\n",
+       "   PaymentMethod_Credit card (automatic)  PaymentMethod_Electronic check  \\\n",
+       "0                                      0                               1   \n",
+       "1                                      0                               0   \n",
+       "2                                      0                               0   \n",
+       "3                                      0                               0   \n",
+       "4                                      0                               1   \n",
+       "\n",
+       "   PaymentMethod_Mailed check  \n",
+       "0                           0  \n",
+       "1                           1  \n",
+       "2                           1  \n",
+       "3                           0  \n",
+       "4                           0  \n",
+       "\n",
+       "[5 rows x 41 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# As 5 primeiras entradas do conjunto de dados transformado\n",
+    "df_prep.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como podemos perceber pelas 5 primeiras entradas do conjunto de dados transformado, não foi retirado uma variável *dummy* de cada variável original que foi transformada, pois como usaremos apenas modelos de *Machine Learning* baseados em árvore de decisão, isso não se faz necessário e, inclusive, é até benéfico para os modelos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Construção dos modelos de *Machine Learning***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para a construção do modelo de *Machine Learning*, não será feito normalização ou padronização nas variáveis do conjunto de dados, pois como utilizaremos apenas modelos baseados em árvore de decisão ou *ensemble* e esses tipos de modelos não são sensíveis a variação do conjunto de dados.\n",
+    "\n",
+    "Além disso, será criado uma *baseline* para podermos comparar os resultados antes e depois do balanceamento da variável `Churn`. E para essa comparação feita de forma simples, ou seja, não será feito qualquer ajuste nos hiperparâmetros dos modelos.\n",
+    "\n",
+    "Então, para começarmos é necessário separar o conjunto de dados em treino e teste, sendo que os dados de teste só serão utilizados ao final do projeto, para, assim, fazermos uma avaliação mais próxima possível do real."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1301,7 +1671,11 @@
     "\n",
     "https://www.investopedia.com/terms/c/churnrate.asp\n",
     "\n",
-    "https://rockcontent.com/br/blog/churn-rate/"
+    "https://rockcontent.com/br/blog/churn-rate/\n",
+    "\n",
+    "https://medium.com/data-hackers/vari%C3%A1veis-dummy-o-que-%C3%A9-quando-usar-e-como-usar-78de66cfcca9\n",
+    "\n",
+    "https://towardsdatascience.com/do-decision-trees-need-feature-scaling-97809eaa60c6"
    ]
   }
  ],
