--- a/churn_prediction.ipynb
+++ b/churn_prediction.ipynb
@@ -1368,7 +1368,7 @@
     "# Criando uma cópia do conjunto de dados\n",
     "df_prep = df_clean.copy()\n",
     "\n",
-    "# Label Enconding para as variáveis numéricas\n",
+    "# Label Enconding para as variáveis categóricas binárias\n",
     "le = LabelEncoder()\n",
     "\n",
     "for i in var_binaria:\n",
