--- a/churn_prediction.ipynb
+++ b/churn_prediction.ipynb
@@ -2255,7 +2255,7 @@
     "- No caso de venda de produtos finais, pode fazer uma análise de quanto tempo um cliente não compra do seu produto ou na sua empresa através dos cadastros dos clientes ou dos clientes que informam CPF no momento da compra;\n",
     "- Para empresas que vendem produtos para CNPJs ou varejistas pode-se criar um questionário para os clientes deles tendo como pergunta principal: \"Você consome o produto da marca XYZ?\", mas lembrando que o questionário deve ser criado de acordo com o produto vendido, porque, por exemplo, a renda familiar pode ser ou não um fator essencial para compra de determinado produto.\n",
     "\n",
-    "Ainda há diversas formas de se utilizar, cabe a pessoa que conhece o tipo de negócio da empresa e o cientista de dados definirem a melhor abordagem para desensolver um projeto nessa área."
+    "Ainda há diversas formas de se utilizar, cabe a pessoa que conhece o tipo de negócio da empresa e o cientista de dados definirem a melhor abordagem para desenvolver um projeto nessa área."
    ]
   },
   {
